--- a/cupy.ipynb
+++ b/cupy.ipynb
@@ -96,7 +96,7 @@
    "id": "05a4e8a2-3966-45f2-b44d-52605f2ed55f",
    "metadata": {},
    "source": [
-    "# NDARRAY"
+    "# N Dimension Array"
    ]
   },
   {
@@ -142,7 +142,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_gpu = cp.array([1, 2, 3])"
+    "x_gpu = cp.array([1, 2, 3]) # allocate an ndarray in the GPU memory"
    ]
   },
   {
@@ -975,12 +975,141 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a8af1ef9-a65a-4a2a-b57f-972c8a1a9ae5",
+   "metadata": {},
+   "source": [
+    "## Memory Management in CuPy"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c1062ca-ff32-4021-8925-7360f5aafe0a",
+   "id": "0ec4d839-c19b-4173-8639-7bc2fdabe02f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "mempool = cp.get_default_memory_pool()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d6a3f605-892e-4d02-ad5d-a6209fd8fdab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pinned_mempool = cp.get_default_pinned_memory_pool()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2126924f-cc82-40c7-a3e1-c4975cfd2ff5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a_cpu = np.ndarray(100, dtype=np.float32)\n",
+    "print(a_cpu.nbytes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "606da62a-9025-4e2f-80d5-a2af76578ef6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(mempool.used_bytes())              # 0\n",
+    "print(mempool.total_bytes())             # 0\n",
+    "print(pinned_mempool.n_free_blocks())    # 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "beccebea-e4c0-4ea5-b9e5-e1e960beece7",
+   "metadata": {},
+   "source": [
+    "Wehn we transfer an array from CPU to GPU it allocates 400 bytes from the device memory pool, and another 400 bytes from the pinned memory pool.  The allocated pinned memory will be released just after the data transfer is complete. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "58ce1c78-326f-48ae-9be6-a410c319e9db",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "a = cp.array(a_cpu)\n",
+    "print(a.nbytes)                          # 400\n",
+    "print(mempool.used_bytes())              # 512\n",
+    "print(mempool.total_bytes())             # 512\n",
+    "print(pinned_mempool.n_free_blocks())    # 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1296033d-a3bd-4d68-85b6-49ac4031c9ae",
+   "metadata": {},
+   "source": [
+    "When an array goes out of scope, the allocated device memory is released\n",
+    "automatically and kept in the pool for future reuse."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "97a2166e-f1bc-4855-b941-d9c16e0a62fa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = None  # (or `del a`)\n",
+    "print(mempool.used_bytes())              # 0\n",
+    "print(mempool.total_bytes())             # 512\n",
+    "print(pinned_mempool.n_free_blocks())    # 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fbae0670-5cf1-4bad-b706-9da94edc9a23",
+   "metadata": {},
+   "source": [
+    "You can clear the memory pool by calling `free_all_blocks`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "88e3546a-5606-4ffe-811f-3dd6ac5f7780",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "mempool.free_all_blocks()\n",
+    "pinned_mempool.free_all_blocks()\n",
+    "print(mempool.used_bytes())              # 0\n",
+    "print(mempool.total_bytes())             # 0\n",
+    "print(pinned_mempool.n_free_blocks())    # 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "148743a0-6ab1-4d9a-8f55-07177c0c6056",
+   "metadata": {},
+   "source": [
+    "### Limiting GPU Memory Usage"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d9eda6b6-f598-4158-8224-8427e51ffbc6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(cp.get_default_memory_pool().get_limit())  # 1073741824"
+   ]
   }
  ],
  "metadata": {
@@ -999,7 +1128,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
